# mimirmind

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  NOTICE  README.md  config.example.json  docker-compose.munin.yml  docker-compose.server.yml  docker-compose.usm-host.yml  docker-compose.usm-shared.yml  docker-compose.yml
doc/: api.md  architecture.md  attached-rollout.md  build.md  config-migration.md  hugin.de.md  hugin.md  journey.md  operations.md  quants.md  roadmap.md  setup-ct.md
examples/: thermal-profile-nuc14.json  thermal-profile-workstation.json
kernels/: add_bias.cl  add_residual.cl  add_rmsnorm.cl  attention.cl  attention_flash_merge.cl  attention_flash_partial.cl  attention_flash_partial_fp16.cl  attention_flash_partial_q8_0.cl  attention_fp16.cl  attention_prefill_flash.cl  attention_prefill_flash_fp16.cl  attention_prefill_flash_q8_0.cl  attention_prefill_flash_q8_0_gqa.cl  attention_q8_0.cl  deltanet_gate.cl  gated_deltanet_ar.cl  gather_heads_from_channels.cl  gelu_mul.cl  kv_quant_commit_q8_0.cl  l2_norm.cl  matmul_q4k_gemm.cl  matmul_q4k_gemm_v2.cl  matmul_q4k_vec.cl  matmul_q4k_vec_dp4a.cl  matmul_q5k_vec.cl  matmul_q6k_gemm.cl  matmul_q6k_gemm_v2.cl  matmul_q6k_vec.cl  matmul_q8_0_gemm.cl  matmul_q8_0_gemm_v2.cl  matmul_q8_0_vec.cl  matmul_q8_0_vec_dp4a.cl  matmul_q8_0_vec_reorder.cl  moe_down_fused_k_q6k.cl  moe_down_fused_k_q8_0.cl  moe_topk.cl  mul_scalar.cl  qkv_split.cl  qkv_split_fp16.cl  rmsnorm.cl  (+16 more)
kernels_cuda/: add_bias.cu  add_one.cu  add_residual.cu  add_rmsnorm.cu  attention.cu  attention_flash_merge.cu  attention_flash_merge_batched.cu  attention_flash_partial.cu  attention_flash_partial_batched.cu  attention_flash_partial_fp16.cu  attention_flash_partial_q8_0.cu  attention_fp16.cu  attention_paged_v1.cu  attention_paged_v2.cu  attention_prefill_flash.cu  attention_prefill_flash_fp16.cu  attention_prefill_flash_q8_0.cu  attention_prefill_flash_q8_0_gqa.cu  attention_q8_0.cu  cast_to_f32.cu  cuda_probe_kernel.cu  deltanet_chunk_cumgate.cu  deltanet_chunk_cumgate_batched.cu  deltanet_chunk_forward.cu  deltanet_chunk_forward_batched.cu  deltanet_gate.cu  deltanet_kkt_solve.cu  dequant_fp8.cu  dequant_nvfp4.cu  ffn_gate_up_fused_q8_0.cu  gated_deltanet_ar.cu  gated_deltanet_ar_batched.cu  gather_heads_from_channels.cu  gelu_mul.cu  kv_quant_commit_q8_0.cu  l2_norm.cu  matmul_f32_vec.cu  matmul_q3k_vec.cu  matmul_q4k_mmq.cu  matmul_q4k_vec.cu  (+40 more)
kernels_hip/: add_bias.hip  add_residual.hip  add_rmsnorm.hip  attention.hip  attention_flash_merge.hip  attention_flash_partial.hip  attention_flash_partial_fp16.hip  attention_flash_partial_q8_0.hip  attention_fp16.hip  attention_prefill_flash.hip  attention_prefill_flash_fp16.hip  attention_prefill_flash_q8_0.hip  attention_prefill_flash_q8_0_gqa.hip  attention_q8_0.hip  deltanet_chunk_cumgate.hip  deltanet_chunk_forward.hip  deltanet_gate.hip  deltanet_kkt_solve.hip  ffn_gate_up_fused_q8_0.hip  gated_deltanet_ar.hip  gather_heads_from_channels.hip  gelu_mul.hip  hip_probe_kernel.hip  kv_quant_commit_q8_0.hip  l2_norm.hip  matmul_f32_vec.hip  matmul_q3k_vec.hip  matmul_q4k_vec.hip  matmul_q5_0_vec.hip  matmul_q5k_vec.hip  matmul_q6k_vec.hip  matmul_q8_0_gemm.hip  matmul_q8_0_gemm_v2.hip  matmul_q8_0_vec.hip  matmul_q8_0_vec_dp4a.hip  matmul_q8_0_vec_reorder.hip  moe_down_fused_k_q6k.hip  moe_down_fused_k_q8_0.hip  moe_gate_up_fused_k_q4k.hip  moe_topk.hip  (+19 more)
samples/: README.md  generate.py  manifest.json
scripts/: bench-length-sweep.sh  bench-vs-baseline.sh  verify-munin-attach.sh
src/: main.cpp
src/cli/: CliParser.cpp  CliParser.hpp
src/compute/: Activations.cpp  Activations.hpp  Attention.cpp  Attention.hpp  ComputeBuffer.hpp  ComputeMatmul.hpp  ComputeOps.hpp  Dequant.cpp  Dequant.hpp  Embedding.cpp  Embedding.hpp  GatedDeltaNet.cpp  GatedDeltaNet.hpp  GpuMatmul.cpp  GpuMatmul.hpp  GpuOps.cpp  GpuOps.hpp  HipGpuOps.cpp  HipGpuOps.hpp  Matmul.cpp  Matmul.hpp  MoeRouting.cpp  MoeRouting.hpp  Norm.cpp  Norm.hpp  QuantType.hpp  QuantTypeRegistry.cpp  QuantTypeRegistry.hpp  Rope.cpp  Rope.hpp  Sampling.cpp  Sampling.hpp  Softmax.cpp  Softmax.hpp  SpeculativeSampler.cpp  SpeculativeSampler.hpp
src/mimirmind/: CliArgs.hpp  CliParser.cpp  CliParser.hpp  ParityMode.cpp  ParityMode.hpp  ServeMode.cpp  ServeMode.hpp  SmokeMode.cpp  SmokeMode.hpp  main.cpp
src/model/: ChatTemplate.cpp  ChatTemplate.hpp  FusedQkvWeights.cpp  FusedQkvWeights.hpp  GgufReader.cpp  GgufReader.hpp  GgufTypes.cpp  LlmConfig.cpp  LlmConfig.hpp  ResponseCleaner.cpp  Tokenizer.cpp  (+4 more)
tests/: TestFramework.hpp  arch_tests.cpp  backend_tests.cpp  compute_tests.cpp  cuda_moe_topk_parity.cpp  cuda_parity_tests.cpp  gpu_tests.cpp  hip_tests.cpp  ipc_tests.cpp  modelopt_tests.cpp  munin_tests.cpp  nvfp4_tests.cpp  prefill_bench.cpp  quant_tests.cpp  safetensors_tests.cpp
tools/: backend-probe.cpp  backend-select-probe.cpp  hip-add-bias-probe.cpp  hip-add-residual-probe.cpp  hip-add-rmsnorm-probe.cpp  hip-attention-flash-merge-probe.cpp  hip-attention-flash-partial-fp16-probe.cpp  hip-attention-flash-partial-probe.cpp  hip-attention-flash-partial-q8-0-probe.cpp  hip-attention-fp16-probe.cpp  hip-attention-prefill-flash-fp16-probe.cpp  hip-attention-prefill-flash-probe.cpp  hip-attention-prefill-flash-q8-0-gqa-probe.cpp  hip-attention-prefill-flash-q8-0-probe.cpp  hip-attention-probe.cpp  hip-attention-q8-0-probe.cpp  hip-deltanet-probe.cpp  hip-ffn-gate-up-q8-probe.cpp  hip-gelu-mul-probe.cpp  hip-kv-quant-commit-q8-0-probe.cpp  hip-matmul-q3k-probe.cpp  hip-matmul-q8-gemm-probe.cpp  hip-matmul-q8-gemm-v2-probe.cpp  hip-matmul-q8-probe.cpp  hip-matmul-q8-vec-dp4a-probe.cpp  hip-matmul-q8-vec-reorder-probe.cpp  hip-mem-probe.cpp  hip-module-probe.cpp  hip-moe-down-fused-k-q6k-probe.cpp  hip-moe-down-fused-k-q8-0-probe.cpp  hip-moe-gate-up-fused-k-q4k-probe.cpp  hip-moe-topk-probe.cpp  hip-mul-scalar-probe.cpp  hip-probe.cpp  hip-qkv-split-fp16-probe.cpp  hip-qkv-split-probe.cpp  hip-rmsnorm-gemma-probe.cpp  hip-rmsnorm-no-weight-probe.cpp  hip-rmsnorm-probe.cpp  hip-rmsnorm-qkv-fp16-probe.cpp  (+16 more)
(+358 files in other folders)
